dd/mm/yy

03/07/2018:
	Created VersionCC:
		shows version of supbot api
		
	Updated XPath:
		bubbleToAuthurName

18/08/18:

	XPath:
		updated xpath for bubble to author name
		
	SendMessageAction:
		added way to tag people with phonenumber regex
		
	ConsoleCommand:
		added way to send arguments with space using qoutes
		
	Schedule:
		made nextSchedule() method public
		
	RemoteActionCall:
		Changed name of RemoteActionCall to StringActionInitializer
		
	ScheduleManager:
		made notifyUpdate public
		
	Created ScheduleTaskInitializer:
		Helps convert arguments (array of strings) into ScheduleTask object
		
	Created ScheduleCreateCC:
		Initialize schedule using Console Command
		
	Created ScheduleDBDeleteCC:
		Delete Schedule from database
		
	Bug fixed ScheduleDatabase.UpdateSchedule:
		blob in ScheduleDatase gets currupted when UpdateSchedule was used
		cause: object name was being saved instead of bytes of serialized object
		fix: serialized schedule object then stored in the blob as bytes
		

05/08/18:

	XPaths:
		Changed input text xpath
		Updated XPaths.newChatGroup to ignore other icons (like mute) which are next to new message icon
		
	Bubble:
		Added exception handling when bubble doesnt contain any text (like emojies)

16/07/18:
	Fixed Bugs:
		bot taps the wrong chat if it shifts up or down due to new messages in other group
			cause: the webview of chatgroup list item was cached which swapped when a listitem shifts up and down to different group during execution
			fix: find the webview everytime it is needed (removed cached webview for chatgroup listitem)
			
		CheckerThread crashes when a group without ";;" gets a message
			cause: group title name was split by ";;" and the 2nd item in the array is checked as the groupid, if the group doesnt have ";;" it would give IndexOutOfBoundExeption
			fix: check if the list after splitting have more than 2 elements, before using the 2nd item to search for groupid

29/4/18:
	Created Scheduler system