@@ -1,5 +1,15 @@
 dd/mm/yy
 
+10/10/2018:
+	Created HelpCC:
+		shows the available console commands and how to use them
+		
+	Added getHelper() Method to all ConsoleCommands
+	
+	Added static DateFormat in Schedule Class:
+		All the Schedule code uses the same date format,
+		so in order to keep it constant DataFormat was added
+
 03/07/2018:
 	Created VersionCC:
 		shows version of supbot api
